@@ -1,3 +1,8 @@
+2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03125] w3m -m < image
+	* file.c (openGeneralPagerBuffer): use internal viewer for -m option
+
 2002-03-13  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03116] Re: aligned block in <td align="center">
@@ -3127,4 +3132,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.344 2002/03/12 16:59:50 ukai Exp $
+$Id: ChangeLog,v 1.345 2002/03/13 15:48:20 ukai Exp $
